# scanner-ble

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
android/: AndroidManifest.xml
resources/qml/: main.qml  qml.qrc  qtquickcontrols2.conf
resources/qml/components/: Icon.qml  ItemCharacteristic.qml  ItemDevice.qml  ItemService.qml
resources/qml/navigation/: FooterBasic.qml  HeaderBasic.qml  ScrollablePage.qml
resources/qml/pages/: Characteristics.qml  Device.qml  Discovery.qml
